--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -131,8 +131,8 @@ $select-arrow-width: 40px
 $select-arrow-height: 100%
 
 // search form
-$search-form-popup-btn-size: 40px
-$search-form-popup-btn-size--sm: 54px
+$search-form-popup-btn-size: 38px
+$search-form-popup-btn-size--sm: 24px
 
 // btn
 $btn-text-color: $text-color !default
@@ -216,6 +216,11 @@ $odnoklassniki-color: #f2822e
 $youtube-color: #e62117
 $instagram-color-start: #de4f5a
 $instagram-color-end: #a43b97
+
+// products
+$product-figure-width: 60px
+$product-figure-height: 45px
+$product-figure-right-space: 20px
 
 // text popup
 $text-popup-width: 780px !default
