--- a/src/sass/components/_products-list.sass
+++ b/src/sass/components/_products-list.sass
@@ -106,8 +106,6 @@
 .products__figure, .products__content, .products__title, .products__stock
 	+display-inline-block-middle
 
-$product-figure-width: 60px
-$product-figure-right-space: 20px
 .products__figure
 	position: relative
 	width: #{$product-figure-width}
@@ -123,6 +121,13 @@ $product-figure-right-space: 20px
 	font-size: $font-size
 	letter-spacing: normal
 	backface-visibility: hidden
+
+	//img
+		display: block
+		width: 100%
+		height: 100%
+		max-width: none
+		+object-fit(contain)
 
 	img
 		display: block
@@ -238,6 +243,53 @@ $product-figure-right-space: 20px
 
 		.in-cart &
 			display: inline-block
+
+// for search page
+.products__news-title
+	+font-bold
+	+font(18px, round-float(25/18, 2))
+	letter-spacing: normal
+	color: black
+	margin-bottom: 0.4em
+	//transition:
+		property: color
+		duration: $animation-speed
+
+	&:last-child
+		margin-bottom: 0
+
+.products__news-text
+	+font(16px, round-float(22/16, 2))
+	letter-spacing: normal
+	color: #666
+	margin-bottom: 0.4em
+
+	&:last-child
+		margin-bottom: 0
+
+.products__news-date
+	+font(16px, round-float(18/14, 2))
+	letter-spacing: normal
+	color: #999
+	margin-bottom: 0.5em
+
+	&:last-child
+		margin-bottom: 0
+
+	time
+		font-style: normal
+
+a.products__inner
+	+padding-horizontal(18px)
+
+//.no-touchevents a.products__inner
+	&:hover
+		background-color: transparent
+
+		.products__news-title
+			color: $link-color
+
+// for search page end
 
 /* grid view
 .products.grid-view-activated
