--- a/src/sass/partials/_forms-light.sass
+++ b/src/sass/partials/_forms-light.sass
@@ -32,6 +32,9 @@
 			color: $form-error-color
 			box-shadow: none
 
+			&:focus
+				box-shadow: none
+
 	.label-holder
 		+size(100%)
 		+font-bold
