--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -116,6 +116,7 @@ $form-success-color: green !default
 $form-bottom-space: 30px !default
 $form-bottom-space--sm: 30px !default
 $form-gap: 60px !default
+$form-gap-alt: 32px !default
 // ==================
 $form-font-size: 18px
 $form-line-height: 24px
@@ -200,7 +201,7 @@ $nav-bg-color-sss: #333 !default
 $nav-bg-color-ssss: #333 !default
 
 // footer
-$footer-nav-horizontal-space: 40px
+$footer-nav-horizontal-space: 40px !default
 
 // top panel
 $top-panel-height: 80px !default
@@ -209,22 +210,22 @@ $top-panel-space: 26px !default
 $top-panel-space--md: 13px !default
 
 // social color
-$facebook-color: #3a589e
-$vkontakte-color: #4b73a4
-$twitter-color: #1da0f2
-$odnoklassniki-color: #f2822e
-$youtube-color: #e62117
-$instagram-color-start: #de4f5a
-$instagram-color-end: #a43b97
+$facebook-color: #3a589e !default
+$vkontakte-color: #4b73a4 !default
+$twitter-color: #1da0f2 !default
+$odnoklassniki-color: #f2822e !default
+$youtube-color: #e62117 !default
+$instagram-color-start: #de4f5a !default
+$instagram-color-end: #a43b97 !default
 
 // products
-$product-figure-width: 60px
-$product-figure-height: 45px
-$product-figure-right-space: 20px
+$product-figure-width: 60px !default
+$product-figure-height: 45px !default
+$product-figure-right-space: 20px !default
 
 // text popup
 $text-popup-width: 780px !default
-$text-popup-bg-color: $bg-color-light
+$text-popup-bg-color: $bg-color-light !default
 
 // product basket
 $product-basket-cell-space: 15px !default
@@ -233,6 +234,9 @@ $product-basket-figure-width--sm: 120px !default
 $product-basket-figure-space: 20px !default
 $product-basket-label-width: 160px !default
 $product-basket-label-width--sm: 100px !default
+
+// ordering
+$ordering-gap: 60px !default
 
 // animation
 $animation-speed: 0.2s !default
