--- a/src/css/libs.css
+++ b/src/css/libs.css
@@ -1071,7 +1071,7 @@
   display: none;
 }
 /*!
- * fullPage 2.9.4
+ * fullPage 2.9.5
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
@@ -1084,13 +1084,6 @@ html.fp-enabled {
   padding: 0;
   overflow: hidden;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-#superContainer {
-  height: 100%;
-  position: relative;
-  -ms-touch-action: none;
-  touch-action: none;
 }
 
 .fp-section {
@@ -1207,11 +1200,13 @@ html.fp-enabled {
 .fp-slidesNav {
   position: absolute;
   z-index: 4;
-  left: 50%;
   opacity: 1;
   -webkit-transform: translate3d(0,0,0);
   -ms-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
+  left: 0!important;
+  right: 0;
+  margin: 0 auto!important;
 }
 
 .fp-slidesNav.bottom {
