--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -819,7 +819,7 @@ input[type="radio"]
 
 /* add field
 .add-field
-	display: block
+	+display-inline-block-top
 	position: relative
 	padding-left: 38px
 	height: 24px
