--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -10,12 +10,15 @@
 
 	.footer__holder
 		overflow: hidden
-		position: absolute
+		position: relative
 		top: auto
 		right: auto
 		bottom: 0
 		cursor: default
 		border-top: 1px solid $outline-color
+
+		&.isBottoming, .no-js &
+			position: absolute
 
 //.footer__holder
 	overflow: hidden
